[metadata]
name = chimera-pulsar
description = Create wideband TOAs from CHIME pulsar observations.
author = Abhimanyu Susobhanan, Gabriella Agazie, David Kaplan
author_email = abhimanyu.susobhanan@nanograv.org
url = https://github.com/abhisrkckl/chimera
# project_urls =
#    Documentation = 
license = License :: GNU General Public License v3.0
classifier =
    Intended Audience :: Science/Research
    License :: GNU General Public License v3.0
    Operating System :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
package_dir = 
include_package_data = True
python_requires = >=3.9
install_requires =
    astropy>=4.0
    numpy>=1.17.0
    loguru
    pint-pulsar>=0.9.0
    PulsePortraiture

[options.packages.find]
where = .

[options.package_data]
* = *.*

[bdist_wheel]
universal = 0

statistics = True
rst-roles =
    class,
    module,
    func,
